@startuml
  entity transportdocument {
    *document_hash: varchar(64)
    --
    *transport_document_json: text
    *is_expected: bool
  }

  entity ebl_envelope {
    *envelope_hash: varchar(64)
    --
    previous_envelope_hash: varchar(64)
    *signature: text
    *document_hash: varchar(64) <<FK>>
  }

  entity transaction {
    *id: uuid
    --
    *document_hash: varchar(64) <<FK>>
    *envelope_hash: varchar(64) <<FK>>
    comments: varchar(255)
    *action: varchar(4)
    is_to_order: bool
    platform_host: varchar(255)
    *timestamp: int8
    transferee: varchar(255) <<FK: party.ebl_platform_identifier>>
  }

  entity party {
    *ebl_platform_identifier: varchar(255)
    --
    *legal_name: varchar(255)
    *registration_number: varchar(255)
    *location_of_registration: varchar(2)
    tax_reference: varchar(255)
  }

  entity supporting_party_code {
    *id: uuid
    *party_id: varchar(255) <<FK: party.ebl_platform_identifier>>
    *party_code: varchar(100)
    *party_code_list_provider: varchar(3)
  }

  ' relations
  ebl_envelope ||--o{ transaction
  ebl_envelope |o--|| transportdocument
  transportdocument ||--o{ transaction
  transaction |o--|| party
  party ||--o{ supporting_party_code
@enduml
